test gitlab push

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,7 @@
-script:
-    compile:
+image: epitechcontent/epitest-docker
+
+compile:
+    script:
             - make
             - make clean
             - make re
