--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,4 +5,5 @@ compile:
             - make
             - make clean
             - make re
+            - make tests_run
             - make fclean
