swap 2 condition in the function check_exec (line: 92 abd 94) && replace all function exec of each redirect function by check_exec

--- a/lib/my/Makefile
+++ b/lib/my/Makefile
@@ -23,7 +23,8 @@ SRC		=		my_putchar.c			\
 				word_array.c			\
 				my_strncmp.c			\
 				my_str_str.c			\
-				my_strstr.c
+				my_strstr.c			\
+				rb_epurstr.c
 
 OBJ		=		$(SRC:.c=.o)
 
